# hikvision-rs

./: .gitignore  Cargo.toml  Conf.json  LICENSE  README.MD  README.en.md  README.md  rustfmt.toml
docs/: README.zh.md
examples/: Cargo.toml  Conf.json  Env.json  global_mvs.rs  global_net.rs  global_sdk.rs
examples/config/: env.rs  mod.rs  tag.rs
src/: lib.rs
src/core/: mod.rs  share.rs
src/core/mvs_sdk/: mod.rs
src/core/mvs_sdk/api/: mod.rs
src/core/mvs_sdk/constant/: device.rs  error.rs  mod.rs  pixel_header.rs
src/core/mvs_sdk/types/: mod.rs
src/core/net_sdk/: mod.rs
src/core/net_sdk/net/: api.rs  mod.rs  types.rs
src/core/net_sdk/play/: api.rs  mod.rs  types.rs
src/utils/: mod.rs  parse.rs
