# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# 设置 crate 类型，有三个选项：`rlib` (Rust library)，`dylib` (dynamic library)，`cdylib` (C-compatible dynamic library)
# 默认是 `rlib`
crate-type = ["rlib"]
proc-macro = false

[features]
net = []
mvs = []
ui = ["e-utils/ui"]
default = []

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libloading = "^0.8.3"
e-utils = { version = "0.3", features = ["algorithm", "macros"] }

[dev-dependencies]
e-log = { version = "0.1", default-features = false, features = ["_tauri"] }
lazy_static = "1.4.0"
hikvision = { version = "0.1", path = "./", features = ["mvs", "net", "ui"] }


[[example]]
name = "global_mvs"
path = "examples/global_mvs.rs"

[[example]]
name = "global_net"
path = "examples/global_net.rs"

[package]
name = "hikvision"
version = "0.1.20"
description = "A rust hikvision sdk; 海康威视 RUST SDK"
edition = "2021"
rust-version = "1.76.0"
homepage = "https://gitee.com/eternalnight996"
license-file = "MIT-LICENSE"
readme = "README.md"
documentation = "https://docs.rs/hikvision"
repository = "https://gitee.com/eternalnight996/hikvision-rs"
include = ["src/", "*.md", "*-LICENSE", "Cargo.toml"]
keywords = ["hikvision", "camera", "mvs", "network", "e-"]
categories = ["hardware-support"]

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
rustdoc-args = ["--cfg", "doc_cfg"]
all-features = true
