[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
hikvision = { version = "0.1", path = "../", features = ["mvs_sdk", "net_sdk"] }
lazy_static = "1.4.0"
e-utils = { version = "0.3", features = ["algorithm", "macros", "ui"] }
e-log = { version = "0.1", default-features = false, features = ["_tauri"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
[[example]]
name = "global_sdk"
path = "global_sdk.rs"
